# mdxport-cli

./: .gitignore  Cargo.toml  LICENSE  PRD.md  README.md
.github/workflows/: release.yml
npm/mdxport/: README.md  package.json
scripts/: bump-version.sh  create-platform-package.sh
src/: compile.rs  convert.rs  frontmatter.rs  lib.rs  main.rs  math.rs  update.rs  watch.rs
src/template/: classic_editorial.typ  mod.rs  modern_tech.typ
tests/: integration.rs
tests/fixtures/: basic.md  cjk.md  e2e_full.md  nested_tables.md  simple.md
