[package]
name = "mdxport"
version = "0.2.0"
edition = "2024"
description = "Markdown to PDF via Typst — comrak AST, in-process compilation, LaTeX math support"
license = "MIT"
repository = "https://github.com/cosformula/mdxport"
homepage = "https://github.com/cosformula/mdxport"
keywords = ["markdown", "pdf", "typst", "converter", "latex"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[lib]
name = "mdxport"
path = "src/lib.rs"

[[bin]]
name = "mdxport"
path = "src/main.rs"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:notify", "dep:reqwest"]

[dependencies]
comrak = "0.35"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
typst = "0.13"
typst-pdf = "0.13"
typst-assets = { version = "0.13", features = ["fonts"] }
tex2typst-rs = "0.4.1"

# CLI-only deps
clap = { version = "4.5", features = ["derive"], optional = true }
notify = { version = "8.0", optional = true }
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[dev-dependencies]
